2005-07-19  Yves Combe  <yves@ycombe.net>

	fix Makefile.am in src/boards/python/admin/.
	fix Group struct definition.
	add functions for admin submodule (gcompris_get_group_from_id and gcompris_get_groups_list).

	* src/boards/py-mod-gcompris.c: (python_gcompris_module_init):
	* src/boards/python/admin/Makefile.am:
	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/module_boards.py:
	* src/gcompris/gcompris_db.c: (gcompris_get_group_from_id),
	(gcompris_get_groups_list):
	* src/gcompris/profile.h:

2005-07-18  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved the gcompris editor. Now columns are of fixed size which
	makes the UI cleaner.
	Implemented the multiselection support in edit dialog.
	Implemented the remove button in the edit dialog.

	* po/POTFILES.in:
	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/constants.py:
	* src/boards/python/admin/group_edit.py:
	* src/boards/python/admin/group_list.py:
	* src/boards/python/admin/group_user_list.py:
	* src/boards/python/admin/user_list.py:
	* src/gcompris/board.c: (init_plugins):

2005-07-18  Yves Combe  <yves@ycombe.net>

	add missing files.

	* src/boards/python/gcompris/admin/Makefile.am:
	* src/boards/python/gcompris/admin/__init__.py:

2005-07-18  Yves Combe  <yves@ycombe.net>

	add some administration usefull function.
	add gcompris.admin submodule for them.
	some fonction are empty for now.

	* configure.in:
	* src/boards/Makefile.am:
	* src/boards/py-gcompris-class.c:
	(gcompris_new_pyGcomprisClassObject),
	(pyGcomprisClassType_dealloc), (pyGcomprisClassType_getattr),
	(pyGcomprisClassType_setattr):
	* src/boards/py-gcompris-group.c:
	(gcompris_new_pyGcomprisGroupObject),
	(pyGcomprisGroupType_dealloc), (pyGcomprisGroupType_getattr),
	(pyGcomprisGroupType_setattr):
	* src/boards/py-gcompris-user.c:
	(gcompris_new_pyGcomprisUserObject), (pyGcomprisUserType_dealloc),
	(pyGcomprisUserType_getattr), (pyGcomprisUserType_setattr):