@@ -1,3 +1,14 @@
+2005-07-19  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Now after edition, the user and group list is updated
+
+	* src/boards/python/admin/__init__.py:
+	* src/boards/python/admin/class_edit.py:
+	* src/boards/python/admin/class_list.py:
+	* src/boards/python/admin/group_edit.py:
+	* src/boards/python/admin/group_list.py:
+	* src/boards/python/admin/group_user_list.py:
+
 2005-07-19  Yves Combe  <yves@ycombe.net>
 
 	fix Makefile.am in src/boards/python/admin/.
